# Oracle2PostgreSQL

./: .dockerignore  .gitignore  Dockerfile  Oracle2PostgreSQL.spec  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_conversion.py
oracle2pg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
samples/: 01_create_tables.sql  02_sequences_indexes.sql  03_views_synonyms.sql  04_plsql_procedures.sql  05_packages.sql  06_triggers.sql  07_queries.sql
src/: config_loader.py  i18n.py  logger.py  migration_rules.py  oracle_parser.py  postgres_generator.py  postgres_transformer.py  report_generator.py
